--- a/index.html
+++ b/index.html
@@ -9,154 +9,39 @@
     />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <script src="/js/bootstrap.bundle.min.js"></script>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/images/logo-desktop-train.ico"
+    />
+    <meta http-equiv="refresh" content="0; url=/pages/apos.html" />
     <title>Aladdin Pos</title>
   </head>
   <body class="container m-3">
-    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link active"
-          id="pills-home-tab"
-          data-bs-toggle="pill"
-          data-bs-target="#pills-home"
-          type="button"
-          role="tab"
-          aria-controls="pills-home"
-          aria-selected="true"
-        >
-          APOS
-        </button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link"
-          id="pills-profile-tab"
-          data-bs-toggle="pill"
-          data-bs-target="#pills-profile"
-          type="button"
-          role="tab"
-          aria-controls="pills-profile"
-          aria-selected="false"
-        >
-          APOS Manager
-        </button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link"
-          id="pills-contact-tab"
-          data-bs-toggle="pill"
-          data-bs-target="#pills-contact"
-          type="button"
-          role="tab"
-          aria-controls="pills-contact"
-          aria-selected="false"
-        >
-          KDS
-        </button>
-      </li>
-    </ul>
-    <div class="tab-content" id="pills-tabContent">
-      <div
-        class="tab-pane fade show active"
-        id="pills-home"
-        role="tabpanel"
-        aria-labelledby="pills-home-tab"
-      >
-        <h4>Aladdin POS</h4>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Version</th>
-              <th scope="col">Ngày phát hành</th>
-              <th scope="col">Android</th>
-              <th scope="col">Windows</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2.4.0</td>
-              <td>02/10/2024</td>
-              <td>
-                <a href="/assets/files/apos/android/APOS_V240_Tablet.apk"
-                  >Tải xuống</a
-                >
-              </td>
-              <td>
-                <a href="/assets/files/apos/windows/APOS_V240_Desktop.exe"
-                  >Tải xuống</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div
-        class="tab-pane fade"
-        id="pills-profile"
-        role="tabpanel"
-        aria-labelledby="pills-profile-tab"
-      >
-        <h4>APOS Manager</h4>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Version</th>
-              <th scope="col">Ngày phát hành</th>
-              <th scope="col">Android</th>
-              <th scope="col">Windows</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1.1.0</td>
-              <td>11/06/2024</td>
-              <td>
-                <a
-                  href="/assets/files/apos-manager/android/APOS_Manager_V110_Tablet.apk"
-                  >Tải xuống</a
-                >
-              </td>
-              <td>
-                <a
-                  href="/assets/files/apos-manager/windows/APOS_Manager_V110_Desktop.exe"
-                  >Tải xuống</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div
-        class="tab-pane fade"
-        id="pills-contact"
-        role="tabpanel"
-        aria-labelledby="pills-contact-tab"
-      >
-        <h4>KDS</h4>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Version</th>
-              <th scope="col">Ngày phát hành</th>
-              <th scope="col">Android</th>
-              <th scope="col">Windows</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1.3.7</td>
-              <td>23/07/2024</td>
-              <td>
-                <a href="/assets/files/kds/android/AKDS_V137_Tablet.apk"
-                  >Tải xuống</a
-                >
-              </td>
-              <td>...</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#">
+        <img
+          src="/assets/images/logo-desktop-train.ico"
+          width="36"
+          height="36"
+          alt=""
+        />
+      </a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link text-primary font-weight-bold"
+            href="/pages/apos.html"
+            >A-POS <span class="sr-only"></span
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/apos-manager.html">A-POS Manager</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/kds.html">KDS</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
