add kds test 23112024

--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -17,10 +17,11 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="container p-3">
+    <h3>KDS Testnet</h3>
     <ul>
       <li>
-        <a href="/assets/files/testnet/AKDS_V138_Tablet.apk"
-          >Test KDS v1.3.8 - 20/11/2024</a
+        <a href="/assets/files/testnet/AKDS_138_Tablet.apk"
+          >Test KDS v1.3.8 - 23/11/2024</a
         >
       </li>
     </ul>
