--- a/pages/apos.html
+++ b/pages/apos.html
@@ -41,33 +41,17 @@
   </header>
   <div class="mb-5">
     <!-- Lateset version -->
-    <!-- <div class="card mb-3">
-      <h5 class="card-header">V2.3.0 (Mới nhất)</h5>
-      <div class="card-body">
-        <h5 class="card-title">Chi tiết cập nhật:</h5>
-        <ul>
-          <li>Chuyển giao đơn bàn cho phục vụ khác</li>
-          <li>Thêm mô tả khi cập nhật đơn bàn</li>
-          <li>Chuyển đổi (đăng nhập) nhanh tài khoản order</li>
-          <li>Thay đổi giá món theo ngày</li>
-        </ul>
-        <a href="/assets/files/android/APOS_V230_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
-          xuống cho Tablet</a>
-        <a href="/assets/files/windows/APOS_V230_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
-          xuống cho Windows (PC)</a>
-      </div>
-    </div> -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.4.0 (Mới nhất) - 02/10/2024</h5>
+      <h5 class="card-header">V2.5.0 (Mới nhất) - 07/12/2024</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Khoá thao tác đơn bàn khi mở phiếu thanh toán</li>
-          <li>Lịch sử đơn bàn thao tác trên thiết bị</li>
+          <li>Thêm order tại bàn O2O</li>
+          <li>Thêm ảnh đính kèm khi thanh toán</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V240_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V250_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V240_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V250_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
@@ -76,6 +60,21 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 240 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.4.0 - 02/10/2024</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Khoá thao tác đơn bàn khi mở phiếu thanh toán</li>
+            <li>Lịch sử đơn bàn thao tác trên thiết bị</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V240_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V240_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
       <!-- 230 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.3.0 (Mới nhất)</h5>
