update apos manager v1.1.1+4

--- a/pages/apos-manager.html
+++ b/pages/apos-manager.html
@@ -42,16 +42,16 @@
       <div class="mb-5">
         <!-- Lateset version -->
         <div class="card mb-3">
-          <h5 class="card-header">V1.1.0 (Mới nhất) - 11/06/2024</h5>
+          <h5 class="card-header">V1.1.1 (Mới nhất) - 29/11/2024</h5>
           <div class="card-body">
             <h5 class="card-title">Chi tiết cập nhật:</h5>
             <ul>
-              <li>Thông báo lịch mới, cập nhật lịch đặt trên Tablet</li>
-              <li><b>Manager:</b> Quản lý món bán (Báo hết món / Mở bán lại)</li>
+              <li>Cải thiện hiệu suất & giao diện đặt bàn</li>
+              <li>Bổ sung giao diện cho Tian Long</li>
             </ul>
-            <a href="/assets/files/apos-manager/android/APOS_Manager_V110_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            <a href="/assets/files/apos-manager/android/APOS_Manager_V111_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
               xuống cho Tablet</a>
-            <a href="/assets/files/apos-manager/windows/APOS_Manager_V110_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            <a href="/assets/files/apos-manager/windows/APOS_Manager_V111_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
               xuống cho Windows (PC)</a>
           </div>
         </div>
@@ -60,6 +60,21 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 1.1.1 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V1.1.0 - 11/06/2024</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Thông báo lịch mới, cập nhật lịch đặt trên Tablet</li>
+            <li><b>Manager:</b> Quản lý món bán (Báo hết món / Mở bán lại)</li>
+          </ul>
+          <a href="/assets/files/apos-manager/android/APOS_Manager_V110_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos-manager/windows/APOS_Manager_V110_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
       <!-- 1.0.1 -->
       <div class="card mb-3">
         <h5 class="card-header">V1.0.1 - 06/06/2024</h5>
