--- a/pages/kds.html
+++ b/pages/kds.html
@@ -21,7 +21,12 @@
   <body class="container p-3">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
-        <img src="/assets/images/logo-desktop-train.ico" width="36" height="36" alt="">
+        <img
+          src="/assets/images/logo-desktop-train.ico"
+          width="36"
+          height="36"
+          alt=""
+        />
       </a>
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -52,15 +57,15 @@
     <!-- Lateset version -->
     <div class="mb-5">
       <div class="card mb-3">
-        <h5 class="card-header">V1.3.7 (Mới nhất) - 23/07/2024</h5>
+        <h5 class="card-header">V1.3.8 (Mới nhất) - 07/12/2024</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Fix lặp bill trả đồ</li>
+            <li>Bỏ sung lọc món đã khoá</li>
+            <li>Cải thiện tốc độ & ổn định</li>
           </ul>
-          <!-- Khi data chưa kịp update vẫn có thể chọn để trả đồ -->
           <a
-            href="/assets/files/kds/android/AKDS_V137_Tablet.apk"
+            href="/assets/files/kds/android/AKDS_V138_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
@@ -76,6 +81,22 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.3.7 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.3.7 - 23/07/2024</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Fix lặp bill trả đồ</li>
+            </ul>
+            <!-- Khi data chưa kịp update vẫn có thể chọn để trả đồ -->
+            <a
+              href="/assets/files/kds/android/AKDS_V137_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+          </div>
+        </div>
         <!-- 1.3.6 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.3.6 - 10/07/2024</h5>
