--- a/pages/apos.html
+++ b/pages/apos.html
@@ -42,16 +42,17 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.0 (Mới nhất) - 07/12/2024</h5>
+      <h5 class="card-header">V2.5.1 (Mới nhất) - 09/12/2024</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
           <li>Thêm order tại bàn O2O</li>
           <li>Thêm ảnh đính kèm khi thanh toán</li>
+          <!-- Ẩn món bán nội bộ -->
         </ul>
-        <a href="/assets/files/apos/android/APOS_V250_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V251_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V250_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V251_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
