kds 138 for win

--- a/pages/kds.html
+++ b/pages/kds.html
@@ -69,6 +69,11 @@
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
+          <a
+            href="/assets/files/kds/windows/AKDS_V138_Desktop.exe"
+            class="btn btn-primary"
+            ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+          >
         </div>
       </div>
     </div>
