--- a/pages/apos.html
+++ b/pages/apos.html
@@ -41,7 +41,7 @@
   </header>
   <div class="mb-5">
     <!-- Lateset version -->
-    <div class="card mb-3">
+    <!-- <div class="card mb-3">
       <h5 class="card-header">V2.5.2 (Mới nhất) - 24/12/2024</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -53,6 +53,21 @@
         <a href="/assets/files/apos/windows/APOS_V252_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
+    </div> -->
+    <div class="card mb-3">
+      <h5 class="card-header">V2.5.1 (Mới nhất) - 09/12/2024</h5>
+      <div class="card-body">
+        <h5 class="card-title">Chi tiết cập nhật:</h5>
+        <ul>
+          <li>Thêm order tại bàn O2O</li>
+          <li>Thêm ảnh đính kèm khi thanh toán</li>
+          <!-- Ẩn món bán nội bộ -->
+        </ul>
+        <a href="/assets/files/apos/android/APOS_V251_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+          xuống cho Tablet</a>
+        <a href="/assets/files/apos/windows/APOS_V251_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
+      </div>
     </div>
     <!-- End lateset version -->
   </div>
@@ -61,21 +76,20 @@
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
       <!-- 2.5.1 -->
-      <div class="card mb-3">
+      <!-- <div class="card mb-3">
         <h5 class="card-header">V2.5.1 - 09/12/2024</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
             <li>Thêm order tại bàn O2O</li>
             <li>Thêm ảnh đính kèm khi thanh toán</li>
-            <!-- Ẩn món bán nội bộ -->
           </ul>
           <a href="/assets/files/apos/android/APOS_V251_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
             xuống cho Tablet</a>
           <a href="/assets/files/apos/windows/APOS_V251_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
             xuống cho Windows (PC)</a>
         </div>
-      </div>
+      </div> -->
       <!-- 240 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.4.0 - 02/10/2024</h5>
