--- a/pages/apos-manager.html
+++ b/pages/apos-manager.html
@@ -31,6 +31,13 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/kds.html">KDS</a>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="/pages/receptionist.html"
+              >Lễ tân</a
+            >
+          </li>
         </ul>
       </nav>
       <hr>
