--- a/pages/apos.html
+++ b/pages/apos.html
@@ -31,6 +31,13 @@
       <li class="nav-item">
         <a class="nav-link" href="/pages/kds.html">KDS</a>
       </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          href="/pages/receptionist.html"
+          >Lễ tân</a
+        >
+      </li>
     </ul>
   </nav>
   <hr>
@@ -41,31 +48,19 @@
   </header>
   <div class="mb-5">
     <!-- Lateset version -->
-    <!-- <div class="card mb-3">
-      <h5 class="card-header">V2.5.2 (Mới nhất) - 24/12/2024</h5>
+    <div class="card mb-3">
+      <h5 class="card-header">V2.5.3 (Mới nhất) - 13/01/2025</h5>
+      <!-- Chính thức triển khai: 13/01/2025 -->
       <div class="card-body">
+        <p>Cập nhật bổ sung cho V2.5.2</p>
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
           <li>Tích hợp cổng thanh toán (Payoo)</li>
+          <li>Fix lỗi mở cổng thanh toán trên PC</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V252_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V253_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V252_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
-          xuống cho Windows (PC)</a>
-      </div>
-    </div> -->
-    <div class="card mb-3">
-      <h5 class="card-header">V2.5.1 (Mới nhất) - 09/12/2024</h5>
-      <div class="card-body">
-        <h5 class="card-title">Chi tiết cập nhật:</h5>
-        <ul>
-          <li>Thêm order tại bàn O2O</li>
-          <li>Thêm ảnh đính kèm khi thanh toán</li>
-          <!-- Ẩn món bán nội bộ -->
-        </ul>
-        <a href="/assets/files/apos/android/APOS_V251_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
-          xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V251_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V253_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
@@ -75,8 +70,22 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.2 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.2 - 24/12/2024</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Tích hợp cổng thanh toán (Payoo)</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V252_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V252_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
       <!-- 2.5.1 -->
-      <!-- <div class="card mb-3">
+      <div class="card mb-3">
         <h5 class="card-header">V2.5.1 - 09/12/2024</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -89,7 +98,7 @@
           <a href="/assets/files/apos/windows/APOS_V251_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
             xuống cho Windows (PC)</a>
         </div>
-      </div> -->
+      </div>
       <!-- 240 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.4.0 - 02/10/2024</h5>
