--- a/pages/kds.html
+++ b/pages/kds.html
@@ -44,6 +44,9 @@
             >KDS</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/receptionist.html">Lễ tân</a>
+        </li>
       </ul>
     </nav>
     <hr />
