--- a/pages/apos.html
+++ b/pages/apos.html
@@ -49,7 +49,28 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.3 (Mới nhất) - 13/01/2025</h5>
+      <h5 class="card-header">V2.5.4 (Mới nhất) - 23/01/2025</h5>
+      <!-- Chính thức triển khai: 13/01/2025 -->
+      <div class="card-body">
+        <h5 class="card-title">Chi tiết cập nhật:</h5>
+        <ul>
+          <li>Fix & cập nhật thông báo lỗi mở cổng thanh toán (PAYOO)</li>
+        </ul>
+        <a href="/assets/files/apos/android/APOS_V254_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+          xuống cho Tablet</a>
+        <a href="/assets/files/apos/windows/APOS_V254_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
+      </div>
+    </div>
+    <!-- End lateset version -->
+  </div>
+  <!-- Old version -->
+  <div class="mb-5">
+    <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
+    <div id="oldVersion" class="collapse">
+      <!-- 2.5.3 -->
+      <div class="card mb-3">
+      <h5 class="card-header">V2.5.3 - 13/01/2025</h5>
       <!-- Chính thức triển khai: 13/01/2025 -->
       <div class="card-body">
         <p>Cập nhật bổ sung cho V2.5.2</p>
@@ -64,12 +85,6 @@
           xuống cho Windows (PC)</a>
       </div>
     </div>
-    <!-- End lateset version -->
-  </div>
-  <!-- Old version -->
-  <div class="mb-5">
-    <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
-    <div id="oldVersion" class="collapse">
       <!-- 2.5.2 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.2 - 24/12/2024</h5>
