--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -58,15 +58,17 @@
       </p>
     </header>
     <!-- Lateset version -->
-    <!-- <div class="mb-5">
+    <div class="mb-5">
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.0 (Mới nhất) - dd/mm/yyyy</h5>
+        <h5 class="card-header">V1.0.0 (Mới nhất) - 12/02/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>.</li>
+            <li>Phát hành phiên bản</li>
           </ul>
-          <a href="#" class="btn btn-primary"
+          <a
+            href="/assets/files/reception/android/AReception_V100_Tablet.apk"
+            class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
           <a href="#" class="btn btn-primary"
@@ -74,7 +76,7 @@
           >
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- Old version -->
     <div class="mb-5">
       <a
