--- a/pages/apos.html
+++ b/pages/apos.html
@@ -51,14 +51,15 @@
     <div class="card mb-3">
       <h5 class="card-header">V2.5.4 (Mới nhất) - 23/01/2025</h5>
       <!-- Chính thức triển khai: 13/01/2025 -->
+       <!-- Hotfix: tuỳ chọn nhập ngày sinh khi tạo khách hàng (Hải Sư) -->
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
           <li>Fix & cập nhật thông báo lỗi mở cổng thanh toán (PAYOO)</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V254_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V254_Tablet_Hotfix.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V254_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V254_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
