--- a/pages/apos.html
+++ b/pages/apos.html
@@ -49,17 +49,21 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.4 (Mới nhất) - 23/01/2025</h5>
+      <h5 class="card-header">V2.5.5 (Mới nhất) - 10/03/2025</h5>
       <!-- Chính thức triển khai: 13/01/2025 -->
        <!-- Hotfix: tuỳ chọn nhập ngày sinh khi tạo khách hàng (Hải Sư) -->
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Fix & cập nhật thông báo lỗi mở cổng thanh toán (PAYOO)</li>
+          <li>Thông tin khách hàng từ mã giảm giá</li>
+          <li>Phương thức thanh toán gắn với chương trình</li>
+          <li>Tích hợp lịch đặt bàn Lễ tân</li>
+          <li>Bỏ qua sinh nhật khi tạo khách hàng</li>
+          <li>Cập nhật giao diện thao tác đơn bàn</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V254_Tablet_Hotfix.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V255_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V254_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V255_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
@@ -69,6 +73,22 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.4 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.4 - 23/01/2025</h5>
+        <!-- Chính thức triển khai: 13/01/2025 -->
+         <!-- Hotfix: tuỳ chọn nhập ngày sinh khi tạo khách hàng (Hải Sư) -->
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Fix & cập nhật thông báo lỗi mở cổng thanh toán (PAYOO)</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V254_Tablet_Hotfix.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V254_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
       <!-- 2.5.3 -->
       <div class="card mb-3">
       <h5 class="card-header">V2.5.3 - 13/01/2025</h5>
