--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -66,12 +66,12 @@
           <ul>
             <li>Phát hành phiên bản</li>
           </ul>
-          <a
-            href="/assets/files/reception/android/AReception_V100_Tablet.apk"
-            class="btn btn-primary"
+          <a href="#" class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
-          <a href="#" class="btn btn-primary"
+          <a
+            href="/assets/files/reception/windowns/A_Reception_V100_Desktop.exe"
+            class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
         </div>
