--- a/pages/apos-manager.html
+++ b/pages/apos-manager.html
@@ -49,25 +49,41 @@
       <div class="mb-5">
         <!-- Lateset version -->
         <div class="card mb-3">
-          <h5 class="card-header">V1.1.1 (Mới nhất) - 29/11/2024</h5>
+          <h5 class="card-header">V1.2.0 (Mới nhất) - 18/03/2024</h5>
           <div class="card-body">
             <h5 class="card-title">Chi tiết cập nhật:</h5>
             <ul>
-              <li>Cải thiện hiệu suất & giao diện đặt bàn</li>
-              <li>Bổ sung giao diện cho Tian Long</li>
+              <li>Loại bỏ các chức năng của Lễ tân</li>
+              <li>Fix bug chuyển giao đơn bàn có lịch đặt bàn</li>
             </ul>
-            <a href="/assets/files/apos-manager/android/APOS_Manager_V111_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            <a href="/assets/files/apos-manager/android/APOS_Manager_V120_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
               xuống cho Tablet</a>
-            <a href="/assets/files/apos-manager/windows/APOS_Manager_V111_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            <a href="/assets/files/apos-manager/windows/APOS_Manager_V120_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
               xuống cho Windows (PC)</a>
           </div>
         </div>
+        <!-- Lateset version -->
       </div>
       <!-- Old version -->
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
       <!-- 1.1.1 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V1.1.1- 29/11/2024</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Cải thiện hiệu suất & giao diện đặt bàn</li>
+            <li>Bổ sung giao diện cho Tian Long</li>
+          </ul>
+          <a href="/assets/files/apos-manager/android/APOS_Manager_V111_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos-manager/windows/APOS_Manager_V111_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
+      <!-- 1.1.0 -->
       <div class="card mb-3">
         <h5 class="card-header">V1.1.0 - 11/06/2024</h5>
         <div class="card-body">
