--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -57,27 +57,28 @@
         trách nhiệm
       </p>
     </header>
-    <!-- Lateset version -->
     <div class="mb-5">
+      <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.0 (Mới nhất) - 13/03/2025</h5>
+        <h5 class="card-header">V1.0.1 (Mới nhất) - 26/03/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Phát hành phiên bản</li>
+            <li>Cải tiến hiển thị lịch</li>
           </ul>
           <a
-            href="/assets/files/reception/android/A_Reception_V100_Tablet.apk"
+            href="/assets/files/reception/android/A_Reception_V101_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
           <a
-            href="/assets/files/reception/windowns/A_Reception_V100_Desktop.exe"
+            href="/assets/files/reception/windowns/A_Reception_V101_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
         </div>
       </div>
+      <!-- End Lateset version -->
     </div>
     <!-- Old version -->
     <div class="mb-5">
@@ -88,7 +89,26 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
-        <!--  -->
+        <!-- 1.0.0 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.0 - 13/03/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Phát hành phiên bản</li>
+            </ul>
+            <a
+              href="/assets/files/reception/android/A_Reception_V100_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+            <a
+              href="/assets/files/reception/windowns/A_Reception_V100_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </body>
