--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -60,19 +60,19 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.1 (Mới nhất) - 26/03/2025</h5>
+        <h5 class="card-header">V1.0.2 (Mới nhất) - 23/04/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Cải tiến hiển thị lịch</li>
+            <li>Cải thiện hiệu suất & ổn định</li>
           </ul>
           <a
-            href="/assets/files/reception/android/A_Reception_V101_Tablet.apk"
+            href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
           <a
-            href="/assets/files/reception/windowns/A_Reception_V101_Desktop.exe"
+            href="/assets/files/reception/windowns/A_Reception_V102_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
@@ -89,6 +89,26 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.0.1 + 2 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.1 - 26/03/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Cải tiến hiển thị lịch</li>
+            </ul>
+            <a
+              href="/assets/files/reception/android/A_Reception_V101_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+            <a
+              href="/assets/files/reception/windowns/A_Reception_V101_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.0.0 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.0.0 - 13/03/2025</h5>
