--- a/pages/kds.html
+++ b/pages/kds.html
@@ -57,28 +57,32 @@
         trách nhiệm
       </p>
     </header>
-    <!-- Lateset version -->
     <div class="mb-5">
+      <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.3.8 (Mới nhất) - 07/12/2024</h5>
+        <h5 class="card-header">V1.3.9 (Mới nhất) - 05/05/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Bỏ sung lọc món đã khoá</li>
-            <li>Cải thiện tốc độ & ổn định</li>
+            <li>Cập nhật bộ lọc món theo khu vực máy in ở màn hình trả đồ</li>
+            <li>
+              Cập nhật cảnh báo món huỷ, món chưa được set khu vực, lỗi đẩy trả
+              đồ
+            </li>
           </ul>
           <a
-            href="/assets/files/kds/android/AKDS_V138_Tablet.apk"
+            href="/assets/files/kds/android/AKDS_V139_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
-          <a
+          <!-- <a
             href="/assets/files/kds/windows/AKDS_V138_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
-          >
+          > -->
         </div>
       </div>
+      <!-- End lateset version -->
     </div>
     <!-- Old version -->
     <div class="mb-5">
@@ -89,6 +93,27 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.3.8 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.3.8 - 07/12/2024</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Bỏ sung lọc món đã khoá</li>
+              <li>Cải thiện tốc độ & ổn định</li>
+            </ul>
+            <a
+              href="/assets/files/kds/android/AKDS_V138_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+            <a
+              href="/assets/files/kds/windows/AKDS_V138_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.3.7 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.3.7 - 23/07/2024</h5>
