--- a/pages/kds.html
+++ b/pages/kds.html
@@ -60,6 +60,26 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
+        <h5 class="card-header">V1.3.8 (Mới nhất) - 07/12/2024</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Bỏ sung lọc món đã khoá</li>
+            <li>Cải thiện tốc độ & ổn định</li>
+          </ul>
+          <a
+            href="/assets/files/kds/android/AKDS_V138_Tablet.apk"
+            class="btn btn-primary"
+            ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+          >
+          <a
+            href="/assets/files/kds/windows/AKDS_V138_Desktop.exe"
+            class="btn btn-primary"
+            ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+          >
+        </div>
+      </div>
+      <!-- <div class="card mb-3">
         <h5 class="card-header">V1.3.9 (Mới nhất) - 05/05/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -75,13 +95,13 @@
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
-          <!-- <a
+          <a
             href="/assets/files/kds/windows/AKDS_V138_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
-          > -->
+          >
         </div>
-      </div>
+      </div> -->
       <!-- End lateset version -->
     </div>
     <!-- Old version -->
@@ -94,7 +114,7 @@
       >
       <div id="oldVersion" class="collapse">
         <!-- 1.3.8 -->
-        <div class="card mb-3">
+        <!-- <div class="card mb-3">
           <h5 class="card-header">V1.3.8 - 07/12/2024</h5>
           <div class="card-body">
             <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -113,7 +133,7 @@
               ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
             >
           </div>
-        </div>
+        </div> -->
         <!-- 1.3.7 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.3.7 - 23/07/2024</h5>
