--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -25,5 +25,8 @@
         >
       </li>
     </ul>
+    <a href="/assets/files/apos/test/testv255mayin.apk"
+      >Test APOS 2.5.5 - 07/05/2025</a
+    >
   </body>
 </html>
