--- a/pages/apos.html
+++ b/pages/apos.html
@@ -73,6 +73,8 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <a href="/assets/files/apos/android/APOS_V2551_Table.apk" class="btn btn-primary"><i class="bi bi-android2"></i> V2.5.5.1+36 Hotfix</a>
+        <br/><br/>
       <!-- 2.5.4 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.4 - 23/01/2025</h5>
