--- a/pages/apos.html
+++ b/pages/apos.html
@@ -38,6 +38,9 @@
           >Lễ tân</a
         >
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/pages/test/index.html">Testnet</a>
+      </li>
     </ul>
   </nav>
   <hr>
@@ -49,22 +52,17 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.5 (Mới nhất) - 10/03/2025</h5>
-      <!-- Chính thức triển khai: 13/01/2025 -->
-       <!-- Hotfix: tuỳ chọn nhập ngày sinh khi tạo khách hàng (Hải Sư) -->
+      <h5 class="card-header">V2.5.5.1 (Mới nhất) - 07/05/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Thông tin khách hàng từ mã giảm giá</li>
-          <li>Phương thức thanh toán gắn với chương trình</li>
-          <li>Tích hợp lịch đặt bàn Lễ tân</li>
-          <li>Bỏ qua sinh nhật khi tạo khách hàng</li>
-          <li>Cập nhật giao diện thao tác đơn bàn</li>
+          <li>Hotfix!</li>
+          <li>Thay đổi cơ chế ping kiểm tra máy in</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V255_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V2551_Table.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V255_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
-          xuống cho Windows (PC)</a>
+        <!-- <a href="/assets/files/apos/windows/APOS_V255_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a> -->
       </div>
     </div>
     <!-- End lateset version -->
@@ -73,8 +71,26 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
-      <a href="/assets/files/apos/android/APOS_V2551_Table.apk" class="btn btn-primary"><i class="bi bi-android2"></i> V2.5.5.1+36 Hotfix</a>
-        <br/><br/>
+        <!-- 2.5.5 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V2.5.5 - 10/03/2025</h5>
+          <!-- Chính thức triển khai: 13/01/2025 -->
+           <!-- Hotfix: tuỳ chọn nhập ngày sinh khi tạo khách hàng (Hải Sư) -->
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Thông tin khách hàng từ mã giảm giá</li>
+              <li>Phương thức thanh toán gắn với chương trình</li>
+              <li>Tích hợp lịch đặt bàn Lễ tân</li>
+              <li>Bỏ qua sinh nhật khi tạo khách hàng</li>
+              <li>Cập nhật giao diện thao tác đơn bàn</li>
+            </ul>
+            <a href="/assets/files/apos/android/APOS_V255_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+              xuống cho Tablet</a>
+            <a href="/assets/files/apos/windows/APOS_V255_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+              xuống cho Windows (PC)</a>
+          </div>
+        </div>
       <!-- 2.5.4 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.4 - 23/01/2025</h5>
