--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -17,14 +17,20 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="container p-3">
-    <h3>KDS Testnet</h3>
+    <h4>KDS Testnet</h4>
     <ul>
       <li>
         <a href="/assets/files/testnet/AKDS_138_Tablet.apk"
           >Test KDS v1.3.8 - 23/11/2024</a
         >
       </li>
+      <li>
+        <a href="/assets/files/kds/android/AKDS_V140_Tablet.apk"
+          >Test KDS v1.4.0 - 09/05/2025</a
+        >
+      </li>
     </ul>
+    <h4>APOS Testnet</h4>
     <a href="/assets/files/apos/test/testv255mayin.apk"
       >Test APOS 2.5.5 - 07/05/2025</a
     >
