--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -26,7 +26,7 @@
       </li>
       <li>
         <a href="/assets/files/kds/android/AKDS_V140_Tablet.apk"
-          >Test KDS v1.4.0 - 09/05/2025</a
+          >Test KDS v1.4.0 - 09/05/2025 - 2</a
         >
       </li>
     </ul>
