--- a/pages/kds.html
+++ b/pages/kds.html
@@ -60,18 +60,17 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.3.9 (Mới nhất) - 07/05/2025</h5>
+        <h5 class="card-header">V1.4.0 (Mới nhất) - 12/05/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Cập nhật bộ lọc món theo khu vực máy in ở màn hình trả đồ</li>
-            <li>
-              Cập nhật cảnh báo món huỷ, món chưa được set khu vực, lỗi đẩy trả
-              đồ
-            </li>
+            <li>Cập nhật bộ lọc khu vực bếp</li>
+            <li>Lịch sử gọi - huỷ món</li>
+            <li>Bổ sung hiển thị Set/Combo trong trả đồ</li>
+            <li>Cài đặt tuỳ chọn in bill</li>
           </ul>
           <a
-            href="/assets/files/kds/android/AKDS_V139_Tablet.apk"
+            href="/assets/files/kds/android/AKDS_V140_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
@@ -93,6 +92,25 @@
           class="btn btn-primary"
           ><i class="bi bi-android2"></i> KDS 1.3.9+23</a
         ><br /><br /> -->
+        <!-- 1.3.9 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.3.9 (Mới nhất) - 07/05/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Cập nhật bộ lọc món theo khu vực máy in ở màn hình trả đồ</li>
+              <li>
+                Cập nhật cảnh báo món huỷ, món chưa được set khu vực, lỗi đẩy
+                trả đồ
+              </li>
+            </ul>
+            <a
+              href="/assets/files/kds/android/AKDS_V139_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+          </div>
+        </div>
         <!-- 1.3.8 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.3.8 - 07/12/2024</h5>
