--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -29,11 +29,18 @@
           >Test KDS v1.4.0 - 09/05/2025 - 3</a
         >
       </li>
+      <li>
+        <a href="/assets/files/kds/android/AKDS_V150_Tablet.apk"
+          >Test KDS v1.5.0 - 17/05/2025</a
+        >
+      </li>
     </ul>
+    <hr />
     <h4>APOS Testnet</h4>
     <a href="/assets/files/apos/test/testv255mayin.apk"
       >Test APOS 2.5.5 - 07/05/2025</a
     >
+    <hr />
     <h4>TTTM Testnet</h4>
     <a href="/assets/files/testnet/app_tttm.apk">Test TTTM - 18/04/2025</a>
   </body>
