--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -30,8 +30,8 @@
         >
       </li>
       <li>
-        <a href="/assets/files/kds/android/AKDS_V150_Tablet.apk"
-          >Test KDS v1.5.0 - 17/05/2025</a
+        <a href="/assets/files/testnet/AKDS_V150_Tablet.apk"
+          >Test KDS v1.5.0 - 17-20/05/2025</a
         >
       </li>
     </ul>
