--- a/pages/kds.html
+++ b/pages/kds.html
@@ -60,17 +60,25 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.4.0 (Mới nhất) - 12/05/2025</h5>
+        <h5 class="card-header">V1.5.0 (Mới nhất) - 29/05/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Cập nhật bộ lọc khu vực bếp</li>
-            <li>Lịch sử gọi - huỷ món</li>
-            <li>Bổ sung hiển thị Set/Combo trong trả đồ</li>
-            <li>Cài đặt tuỳ chọn in bill</li>
+            <li>Thêm đơn vị tính trong bill trả đồ</li>
+            <li>Xác nhận huỷ món với số lượng nhiều</li>
+            <li>Lọc món theo thể loại</li>
+            <li>Cập nhật ghi chú tổng, lẻ, món thành phần</li>
+            <li>Chuyển bộ lọc khu vực máy in, máy in trả đồ</li>
+            <li>
+              <a
+                href="https://docs.google.com/document/d/19CbN45UukCYJpOjJMnZsXLrsPQCYbnjO/edit#heading=h.8m69nzyu27um"
+                target="_blank"
+                >☞ Xem chi tiết cập nhật trên Google Docs</a
+              >
+            </li>
           </ul>
           <a
-            href="/assets/files/kds/android/AKDS_V140_Tablet.apk"
+            href="/assets/files/kds/android/AKDS_V150_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
@@ -87,11 +95,24 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
-        <!-- <a
-          href="/assets/files/kds/android/AKDS_V139_Tablet.apk"
-          class="btn btn-primary"
-          ><i class="bi bi-android2"></i> KDS 1.3.9+23</a
-        ><br /><br /> -->
+        <!-- 1.4.0 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.4.0 - 12/05/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Cập nhật bộ lọc khu vực bếp</li>
+              <li>Lịch sử gọi - huỷ món</li>
+              <li>Bổ sung hiển thị Set/Combo trong trả đồ</li>
+              <li>Cài đặt tuỳ chọn in bill</li>
+            </ul>
+            <a
+              href="/assets/files/kds/android/AKDS_V140_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+          </div>
+        </div>
         <!-- 1.3.9 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.3.9 (Mới nhất) - 07/05/2025</h5>
