update kds 150 message

--- a/pages/kds.html
+++ b/pages/kds.html
@@ -83,6 +83,10 @@
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
         </div>
+        <p class="p-2 text-danger fw-bold">
+          Phiên bản này nhà hàng không tự ý cập nhật khi CNTT chưa thông báo
+          trên nhóm chung ạ!
+        </p>
       </div>
       <!-- End lateset version -->
     </div>
