--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -34,6 +34,11 @@
           >Test KDS v1.5.0 - 20/05/2025.28.1541</a
         >
       </li>
+      <li>
+        <a href="/assets/files/kds/android/AKDS_V151_Tablet.apk"
+          >Test KDS v1.5.1 - 18/06/2025</a
+        >
+      </li>
     </ul>
     <hr />
     <h4>APOS Testnet</h4>
