--- a/pages/apos.html
+++ b/pages/apos.html
@@ -39,7 +39,7 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/pages/test/index.html">Testnet</a>
+        <a class="nav-link" href="/pages/test/index.html">Beta</a>
       </li>
     </ul>
   </nav>
