--- a/pages/apos-manager.html
+++ b/pages/apos-manager.html
@@ -38,6 +38,9 @@
               >Lễ tân</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/apos-lite.html">APOS-Lite</a>
+          </li>
         </ul>
       </nav>
       <hr>
