--- a/pages/apos.html
+++ b/pages/apos.html
@@ -39,6 +39,9 @@
         >
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/pages/apos-lite.html">APOS-Lite</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/pages/test/index.html">Beta</a>
       </li>
     </ul>
