--- a/pages/kds.html
+++ b/pages/kds.html
@@ -47,6 +47,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/receptionist.html">Lễ tân</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/apos-lite.html">APOS-Lite</a>
+        </li>
       </ul>
     </nav>
     <hr />
