--- a/pages/apos.html
+++ b/pages/apos.html
@@ -55,17 +55,18 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.5.1 (Mới nhất) - 07/05/2025</h5>
+      <h5 class="card-header">V2.5.6 (Mới nhất) - 18/06/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Hotfix!</li>
-          <li>Thay đổi cơ chế ping kiểm tra máy in</li>
+          <li>Bổ sung hiển thị Tiếng Trung</li>
+          <li>Thêm thông tin khi tạo hoá đơn VAT</li>
+          <li>Lấy thông tin khách hàng trên O2O</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V2551_Table.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V256_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <!-- <a href="/assets/files/apos/windows/APOS_V255_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
-          xuống cho Windows (PC)</a> -->
+        <a href="/assets/files/apos/windows/APOS_V256_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
       </div>
     </div>
     <!-- End lateset version -->
@@ -74,6 +75,21 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.5.1 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.5.1 (Mới nhất) - 07/05/2025</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Hotfix!</li>
+            <li>Thay đổi cơ chế ping kiểm tra máy in</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V2551_Table.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <!-- <a href="/assets/files/apos/windows/APOS_V255_Desktop_Hotfix.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a> -->
+        </div>
+      </div>
         <!-- 2.5.5 -->
         <div class="card mb-3">
           <h5 class="card-header">V2.5.5 - 10/03/2025</h5>
