--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -42,9 +42,18 @@
     </ul>
     <hr />
     <h4>APOS Testnet</h4>
-    <a href="/assets/files/apos/test/testv255mayin.apk"
+    <ul>
+      <!-- <li>
+        <a href="/assets/files/apos/test/testv255mayin.apk"
       >Test APOS 2.5.5 - 07/05/2025</a
     >
+      </li> -->
+      <li>
+        <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk"
+      >Test APOS 2.5.6.1 - 21/06/2025</a
+    >
+      </li>
+    </ul>
     <hr />
     <h4>TTTM Testnet</h4>
     <a href="/assets/files/testnet/app_tttm.apk">Test TTTM - 18/04/2025</a>
