--- a/pages/apos.html
+++ b/pages/apos.html
@@ -63,8 +63,8 @@
         </ul>
         <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <!-- <a href="/assets/files/apos/windows/APOS_V256_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
-          xuống cho Windows (PC)</a> -->
+        <a href="/assets/files/apos/windows/APOS_V256_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
       </div>
     </div>
     <!-- End lateset version -->
