--- a/pages/kds.html
+++ b/pages/kds.html
@@ -63,6 +63,33 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
+        <h5 class="card-header">V1.5.1 (Mới nhất) - 18/06/2025</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Fix vào chậm món order</li>
+            </li>
+          </ul>
+          <a
+            href="/assets/files/kds/android/AKDS_V151_Tablet.apk"
+            class="btn btn-primary"
+            ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+          >
+        </div>
+      </div>
+      <!-- End lateset version -->
+    </div>
+    <!-- Old version -->
+    <div class="mb-5">
+      <a
+        class="btn btn-secondary mb-3"
+        data-bs-toggle="collapse"
+        href="#oldVersion"
+        >Phiên bản cũ hơn ↓</a
+      >
+      <div id="oldVersion" class="collapse">
+        <!-- 1.5.0 -->
+         <div class="card mb-3">
         <h5 class="card-header">V1.5.0 (Mới nhất) - 29/05/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -91,17 +118,6 @@
           trên nhóm chung ạ!
         </p>
       </div>
-      <!-- End lateset version -->
-    </div>
-    <!-- Old version -->
-    <div class="mb-5">
-      <a
-        class="btn btn-secondary mb-3"
-        data-bs-toggle="collapse"
-        href="#oldVersion"
-        >Phiên bản cũ hơn ↓</a
-      >
-      <div id="oldVersion" class="collapse">
         <!-- 1.4.0 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.4.0 - 12/05/2025</h5>
