--- a/pages/apos.html
+++ b/pages/apos.html
@@ -55,15 +55,15 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.6.1 (Mới nhất) - 21/06/2025</h5>
+      <h5 class="card-header">V2.5.7 (Mới nhất) - 26/06/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Hotfix - Ping máy in lỗi</li>
+          <li>Bổ sung mã tặng món không thu tiền</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V257_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V256_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V257_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
@@ -73,6 +73,20 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.6.1 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.6.1 (Mới nhất) - 21/06/2025</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Hotfix - Ping máy in lỗi</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V256_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
       <!-- 2.5.6 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.6 (Mới nhất) - 18/06/2025</h5>
