--- a/pages/apos.html
+++ b/pages/apos.html
@@ -59,7 +59,7 @@
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Bổ sung mã tặng món không thu tiền</li>
+          <li>Bổ sung cách thể hiện mã tặng món không thu tiền</li>
         </ul>
         <a href="/assets/files/apos/android/APOS_V257_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
