--- a/pages/apos.html
+++ b/pages/apos.html
@@ -53,8 +53,21 @@
     </p>
   </header>
   <div class="mb-5">
-    <!-- Lateset version -->
     <div class="card mb-3">
+      <h5 class="card-header">V2.5.6.1 (Mới nhất) - 21/06/2025</h5>
+      <div class="card-body">
+        <h5 class="card-title">Chi tiết cập nhật:</h5>
+        <ul>
+          <li>Hotfix - Ping máy in lỗi</li>
+        </ul>
+        <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+          xuống cho Tablet</a>
+        <a href="/assets/files/apos/windows/APOS_V256_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
+      </div>
+    </div>
+    <!-- Lateset version -->
+    <!-- <div class="card mb-3">
       <h5 class="card-header">V2.5.7 (Mới nhất) - 26/06/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -66,7 +79,7 @@
         <a href="/assets/files/apos/windows/APOS_V257_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
-    </div>
+    </div> -->
     <!-- End lateset version -->
   </div>
   <!-- Old version -->
