--- a/pages/apos.html
+++ b/pages/apos.html
@@ -55,6 +55,19 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
+      <h5 class="card-header">V2.5.6.1 (Mới nhất) - 21/06/2025</h5>
+      <div class="card-body">
+        <h5 class="card-title">Chi tiết cập nhật:</h5>
+        <ul>
+          <li>Hotfix - Ping máy in lỗi</li>
+        </ul>
+        <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+          xuống cho Tablet</a>
+        <a href="/assets/files/apos/windows/APOS_V256_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
+      </div>
+    </div>
+    <!-- <div class="card mb-3">
       <h5 class="card-header">V2.5.7 (Mới nhất) - 30/06/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -67,7 +80,7 @@
           xuống cho Windows (PC)</a>
       </div>
       <p class="p-3 text-danger fw-bold">NH không cài phiên bản này nếu CNTT chưa thông báo ở nhóm chung.</p>
-    </div>
+    </div> -->
     <!-- End lateset version -->
   </div>
   <!-- Old version -->
