--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -50,8 +50,13 @@
       </li> -->
       <li>
         <a href="/assets/files/apos/android/APOS_V2561_Tablet.apk"
-      >Test APOS 2.5.6.1 - 21/06/2025</a
-    >
+          >Test APOS 2.5.6.1 - 21/06/2025</a
+        >
+      </li>
+      <li>
+        <a href="/assets/files/apos/android/APOS_V2561_Tab_test0107.apk"
+          >Test APOS 2.5.6.1 - 01/07/2025</a
+        >
       </li>
     </ul>
     <hr />
