--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -39,6 +39,11 @@
           >Test KDS v1.5.1 - 18/06/2025</a
         >
       </li>
+      <li>
+        <a href="/assets/files/kds/android/AKDS_V152_Tablet.apk"
+          >Test KDS v1.5.2 - 03/07/2025</a
+        >
+      </li>
     </ul>
     <hr />
     <h4>APOS Testnet</h4>
