--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -41,7 +41,7 @@
       </li>
       <li>
         <a href="/assets/files/kds/android/AKDS_V152_Tablet.apk"
-          >Test KDS v1.5.2 - 03/07/2025</a
+          >Test KDS v1.5.2 -02- 03/07/2025</a
         >
       </li>
     </ul>
