--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -63,6 +63,11 @@
           >Test APOS 2.5.6.1 - 03 - 02/07/2025</a
         >
       </li>
+      <li>
+        <a href="/assets/files/testnet/test250-0307.apk"
+          >Test APOS 2.5.0 - 03/07/2025</a
+        >
+      </li>
     </ul>
     <hr />
     <h4>TTTM Testnet</h4>
