--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -68,6 +68,11 @@
           >Test APOS 02 - 05/07/2025</a
         >
       </li>
+      <li>
+        <a href="/assets/files/apos/test/apos_3_2561.apk"
+          >Test APOS 03 - 05/07/2025</a
+        >
+      </li>
     </ul>
     <hr />
     <h4>TTTM Testnet</h4>
