--- a/pages/test/index.html
+++ b/pages/test/index.html
@@ -73,6 +73,11 @@
           >Test APOS 03 - 05/07/2025</a
         >
       </li>
+      <li>
+        <a href="/assets/files/apos/test/apos_04_2561.apk"
+          >Test APOS 05 - khong tieng trung - 05/07/2025</a
+        >
+      </li>
     </ul>
     <hr />
     <h4>TTTM Testnet</h4>
