--- a/pages/apos.html
+++ b/pages/apos.html
@@ -55,19 +55,17 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.7 (Mới nhất) - 07/07/2025</h5>
+      <h5 class="card-header">V2.5.7.1 (Mới nhất) - 16/07/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Ẩn bảng đánh giá khách hàng khi hoàn thành đơn bàn</li>
-          <li>Cải thiện hiệu suất & ổn định</li>
+          <li>Fix lỗi nhảy con trỏ khi nhập dữ liệu</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V257_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V257_1_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V257_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V257_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
-      <p class="p-3 text-danger fw-bold">NH không cài phiên bản này nếu CNTT chưa thông báo ở nhóm chung.</p>
     </div>
     <!-- End lateset version -->
   </div>
@@ -75,6 +73,22 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.7 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.7 (Mới nhất) - 07/07/2025</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Ẩn bảng đánh giá khách hàng khi hoàn thành đơn bàn</li>
+            <li>Cải thiện hiệu suất & ổn định</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V257_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V257_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+        <p class="p-3 text-danger fw-bold">NH không cài phiên bản này nếu CNTT chưa thông báo ở nhóm chung.</p>
+      </div>
       <!-- 2.5.6.1 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.6.1 (Mới nhất) - 21/06/2025</h5>
