--- a/pages/apos.html
+++ b/pages/apos.html
@@ -54,7 +54,7 @@
   </header>
   <div class="mb-5">
     <!-- Lateset version -->
-    <div class="card mb-3">
+    <!-- <div class="card mb-3">
       <h5 class="card-header">V2.5.8 (Mới nhất) - 21/07/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
@@ -66,6 +66,19 @@
         <a href="/assets/files/apos/windows/APOS_V258_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
+    </div> -->
+    <div class="card mb-3">
+      <h5 class="card-header">V2.5.7.1 (Mới nhất) - 16/07/2025</h5>
+      <div class="card-body">
+        <h5 class="card-title">Chi tiết cập nhật:</h5>
+        <ul>
+          <li>Fix lỗi nhảy con trỏ khi nhập dữ liệu</li>
+        </ul>
+        <a href="/assets/files/apos/android/APOS_V257_1_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+          xuống cho Tablet</a>
+        <a href="/assets/files/apos/windows/APOS_V257_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+          xuống cho Windows (PC)</a>
+      </div>
     </div>
     <!-- End lateset version -->
   </div>
@@ -75,7 +88,7 @@
     <div id="oldVersion" class="collapse">
       <!-- 2.5.7.1 -->
       <div class="card mb-3">
-        <h5 class="card-header">V2.5.7.1 (Mới nhất) - 16/07/2025</h5>
+        <h5 class="card-header">V2.5.7.1 - 16/07/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
@@ -89,7 +102,7 @@
       </div>
       <!-- 2.5.7 -->
       <div class="card mb-3">
-        <h5 class="card-header">V2.5.7 (Mới nhất) - 07/07/2025</h5>
+        <h5 class="card-header">V2.5.7 - 07/07/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
