--- a/pages/apos-lite.html
+++ b/pages/apos-lite.html
@@ -66,7 +66,7 @@
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Cập nhật ...</li>
+            <li>Triển khai mã giảm đồng giá theo số khách</li>
           </ul>
           <!-- <a
             href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
