--- a/pages/apos.html
+++ b/pages/apos.html
@@ -44,6 +44,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/pages/test/index.html">Beta</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/pages/tools.html">Tools</a>
+      </li>
     </ul>
   </nav>
   <hr>
