--- a/pages/kds.html
+++ b/pages/kds.html
@@ -79,6 +79,9 @@
       </div>
       <!-- End lateset version -->
     </div>
+    <p>
+      <a href="/assets/files/kds/android/AKDS_V155_30_Tablet.apk">Beta - KDS 1.5.5+30 Tablet</a> (Phiên bản thử nghiệm)
+    </p>
     <!-- Old version -->
     <div class="mb-5">
       <a
